--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
+appdirs==1.4.3
+asn1crypto==0.22.0
 beautifulsoup4==4.5.3
 bs4==0.0.1
+cffi==1.10.0
+cryptography==1.8.1
+idna==2.5
 lxml==3.7.2
+packaging==16.8
+pycparser==2.17
+pyOpenSSL==17.0.0
+pyparsing==2.2.0
 requests==2.12.4
+six==1.10.0
 Unidecode==0.4.20
